syntax = "proto3";

option go_package = "github.com/chkda/mapreduce/rpc/master";

service Master{
    rpc Trigger(TaskRequest) returns (MasterAck);
    rpc RegisterWorker(WorkerInfo) returns (MasterAck);
    rpc UpdateMapResult(MapResult) returns (MasterAck);
    rpc UpdateDataNodes(DFSDataNodesInfo) returns (MasterAck);
    rpc UpdateReduceResult(ReduceResult) returns (MasterAck);
}

enum Status {
    IDLE = 0;
    IN_PROGRESS = 1;
    COMPLETED = 2;
    FAILED = 3;
}

message TaskRequest {
    
}

message WorkerInfo {
    string uuid = 1;
    string ip = 2;
}

message MapResult {
    string uuid = 1;
    Status task_status = 2;
    repeated string output_files = 3;
}

message ReduceResult {
    string uuid = 1;
    Status task_status = 2;
    string filename = 3;
}

message MasterAck{
    bool success=1;
}

message DFSDataNodesInfo{
    string filename = 1;
    repeated DFSNodeFileInfo nodes = 2;
}

message DFSNodeFileInfo{
    string uuid = 1;
    string ip = 2;
    repeated string files = 3;
}